--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -5,7 +5,7 @@ header {
   //position: fixed;
   position: absolute;
   top: 0;
-  z-index: 2;
+  z-index: 99;
   padding-top: 2rem;
   padding-bottom: 2rem;
   width: 100%;
